syntax = "proto3";

package kattsyn.dev.SocialNetwork.grpc;

message CreatePostRequest {
  int64 author_id = 1;
  string header = 2;
  string text = 3;
}

message GetPostByIdRequest {
  int64 postId = 1;
}

message GetPostsRequest {
  int32 page = 1;
  int32 count = 2;
}

message EditPostRequest {
  int64 postId = 1;
  int64 userId = 2;
  string header = 3;
  string text = 4;
}

message DeletePostRequest {
  int64 postId = 1;
}

message PostResponse {
  int64 postId = 1;
  int64 authorId = 2;
  string header = 3;
  string text = 4;
}

message PostPageResponse {
  repeated PostResponse posts = 1;
}

message EditPostResponse {
  string response = 1;
}

message DeletePostResponse {
  string response = 1;
}

message CreatePostResponse {
  string response = 1;
}

service PostService {
  rpc getPostById(GetPostByIdRequest) returns (stream PostResponse);
  rpc getPosts(GetPostsRequest) returns (stream PostPageResponse);
  rpc editPost(EditPostRequest) returns (stream EditPostResponse);
  rpc deletePost(DeletePostRequest) returns (stream DeletePostResponse);
  rpc createPost(CreatePostRequest) returns (stream CreatePostResponse);
}